# cnn-vs-mlp

./: .gitignore  README.md  main.py  pyproject.toml
configs/: base.yaml  cnn.yaml  mlp.yaml
experiments/cnn-20251029-134316/: best.pt  summary.json  test_report.json  train_history.json
experiments/mlp-20251029-145410/: summary.json  test_report.json  train_history.json
scripts/: evaluate.py  train.py
src/models/: data.py  metrics.py  utils.py  viz.py
src/models/architectures/: cnn.py  mlp.py
src/models/engine/: evaluate.py  trainer.py
